--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "^14.2.17",
     "openai": "^4.71.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
