--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.456.0",
     "next": "^14.2.17",
     "openai": "^4.71.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "latest"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-icons": "^4.7.1",
