--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/react": "18.3.12",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-icons": "^4.7.1",
     "swiper": "^8.4.5",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "5.6.3"
   }
 }
